--- a/src/locale/ua.json
+++ b/src/locale/ua.json
@@ -1,4 +1,6 @@
 {
   "title": "Назва заголовка {{appName}}",
-  "list": "Список карток"
+  "list": "Список карток",
+  "save": "Зберегти",
+  "cancel": "Скасувати"
 }
